2006-10-17  Akim Demaille  <demaille@gostai.com>

	Use new HAVE_ symbols.
	* thread.hh: Formatting changes.
	* lockable.hh: Check URBI_AIBO and HAVE_PTHREAD_H.
	* README: More doc.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	semaphore.hh, thread.hh.
	* semaphore.hh: New.
	* thread.hh: New.
	From liburbi-c++/src/liburbi/lockable.h.
	* lockable.hh (LOCKED): New.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Add lockable.hh.

	* lockable.h: New.
	* README: New.
