@@ -1,3 +1,8 @@
+2006-10-18  Akim Demaille  <demaille@gostai.com>
+
+	* hash.hh: New.
+	* README: More doc, more todo.
+
 2006-10-17  Akim Demaille  <demaille@gostai.com>
 
 	Use new HAVE_ symbols.
@@ -19,4 +24,3 @@
 
 	* lockable.h: New.
 	* README: New.
-
